@@ -77,3 +77,8 @@ HuffmanNode Decode
 |   Compress | 11.47 ms | 0.348 ms | 0.019 ms | 656.2500 | 656.2500 | 656.2500 |   2.81 MB |
 | Uncompress | 10.14 ms | 0.633 ms | 0.035 ms | 484.3750 | 484.3750 | 484.3750 |   1.79 MB |
 
+Huffman Fill
+|     Method |      Mean |     Error |    StdDev |     Gen0 |     Gen1 |     Gen2 | Allocated |
+|----------- |----------:|----------:|----------:|---------:|---------:|---------:|----------:|
+|   Compress |  7.911 ms | 0.2309 ms | 0.0127 ms | 984.3750 | 984.3750 | 984.3750 |   3.03 MB |
+| Uncompress | 10.447 ms | 1.9141 ms | 0.1049 ms | 484.3750 | 484.3750 | 484.3750 |   1.79 MB |
